# snowflow

./: README.md  pyproject.toml
src/snowflow/: config.py  typemap.py  utils.py
src/snowflow/inflow/s3/rdsexport/: config.py  flow.py  metadata.py
src/snowflow/inflow/s3/rdsexport/templates/: copy_into_table.j2.sql  create_database.j2.sql  create_schema.j2.sql  create_stage.j2.sql  create_table.j2.sql  use_schema.j2.sql
